namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-probation-staffing-model-dash-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-probation-staffing-model-dash-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "psmdat"
    cloud-platform.justice.gov.uk/application: "Probation Staffing Model Dash App"
    cloud-platform.justice.gov.uk/owner: "data and analysis, modelling hub, strategic workforce and pay: swaprequests@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/probation-staffing-model-dash-app"
    cloud-platform.justice.gov.uk/team-name: "swap"
    cloud-platform.justice.gov.uk/review-after: ""
